--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-multiselect",
-  "version": "0.9.15",
+  "version": "0.9.17",
   "description": "JQuery multiselect plugin based on Twitter Bootstrap.",
   "main": "dist/js/bootstrap-multiselect.js",
   "directories": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/davidstutz/bootstrap-multiselect"
+    "url": "https://github.com/Benau/bootstrap-multiselect"
   },
   "keywords": [
     "js",
@@ -29,7 +29,7 @@
     "test": "karma start tests/karma.conf.js --single-run"
   },
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": ">= 3.5.0"
   },
   "devDependencies": {
     "jasmine-core": "*",
